# GstHanddetect

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
examples/: Makefile.am  videoControl.c
examples/videoControl/: .cproject  .project  Makefile.am
examples/videoControl/src/: Makefile.am  main.c
src/: Makefile.am  gsthanddetect.c  gsthanddetect.h
src/.deps/: gsthanddetect.Plo  gstopencvutils.Plo  gstopencvvideofilter.Plo
src/.libs/: libgsthanddetect.la  libgsthanddetect.lai  libgsthanddetect.so.0  libgsthanddetect.so.0.0.0
src/xml/: palm.xml
