lib_LTLIBRARIES = libgsthanddetect.la

libgsthanddetect_la_LIBADD = $(GST_LIBS)
libgsthanddetect_la_SOURCES = \
gsthanddetect.c \
gsthanddetect.h \
gstopencvvideofilter.c \
gstopencvvideofilter.h \
gstopencvutils.c \
gstopencvutils.h

AM_CPPFLAGS = $(GST_CFLAGS)

libdir=${exec_prefix}/lib/gstreamer-0.10
